@@ -1,3 +1,7 @@
+2006-04-25  Matthias Wimmer  <m@tthias.eu>
+
+    * xdb_sql/xdb_sql.c: fixed reestablishing of mysql server connections
+
 2006-03-15  Matthias Wimmer  <m@tthias.net>
 
     * jabber.xml.dist.in: changed category and type of the disco#info result
